# Excelcompare

./: tsty.tsx
backend/app/: alembic.ini  config.py  crud.py  database.py  deps.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 39aa156b9acf_init.py  a24dbc0ed400_added_differences_to_log.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.css
frontend/src/components/: FileUpload.tsx  Login.tsx  NavBar.tsx
frontend/src/pages/: App.tsx  ComparePage.tsx  CreateUserPage.tsx  LoginPage.tsx  LogsPage.tsx  UsersPage.tsx
